--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-python = "3.9.13"
-numpy = "1.24.1"
-scipy = "1.10.0"
-matplotlib = "3.6.3"
-ipython = "8.8.0"
-librosa = "0.9.2"
-pandas = "1.5.3"
-scikit-learn = "1.2.1"
-torch = "1.13.0"
-jupyter = "1.0.0"
+python == 3.9.13
+numpy == 1.24.1
+scipy == 1.10.0
+matplotlib == 3.6.3
+ipython == 8.8.0
+librosa == 0.9.2
+pandas == 1.5.3
+scikit-learn == 1.2.1
+torch == 1.13.0
+jupyter == 1.0.0
