- Add .npy files to gitignore - Increase line length in black.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,7 @@ librosa = "0.8.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 100
+target-version = ["py38"]
