--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-python == 3.9.13
-numpy == 1.23.4
-scipy == 1.10.0
-matplotlib == 3.6.3
-ipython == 8.8.0
-librosa == 0.8.1
-pandas == 1.5.3
-scikit-learn == 1.2.1
-torch == 1.13.0
-jupyter == 1.0.0
+joblib==1.2.0
+librosa==0.9.2
+matplotlib==3.6.2
+numpy==1.23.4
+pandas==1.5.1
+scikit_learn==1.2.2
+torch==1.13.0
+torchaudio==0.13.1
+torchmetrics==0.11.3
